@@ -70,6 +70,36 @@ public class ParameterProcessor {
 	private boolean useSavedValues;
 	private Report suppliedReport;
 	private boolean parameterSelection = false;
+	private Map<String, String[]> requestParameters;
+	private Map<String, String[]> reportRequestParameters;
+
+	/**
+	 * @return the requestParameters
+	 */
+	public Map<String, String[]> getRequestParameters() {
+		return requestParameters;
+	}
+
+	/**
+	 * @param requestParameters the requestParameters to set
+	 */
+	public void setRequestParameters(Map<String, String[]> requestParameters) {
+		this.requestParameters = requestParameters;
+	}
+
+	/**
+	 * @return the reportRequestParameters
+	 */
+	public Map<String, String[]> getReportRequestParameters() {
+		return reportRequestParameters;
+	}
+
+	/**
+	 * @param reportRequestParameters the reportRequestParameters to set
+	 */
+	public void setReportRequestParameters(Map<String, String[]> reportRequestParameters) {
+		this.reportRequestParameters = reportRequestParameters;
+	}
 
 	/**
 	 * @return the parameterSelection
@@ -164,8 +194,17 @@ public class ParameterProcessor {
 		logger.debug("Entering processParameters: reportId={}", reportId);
 
 		Map<String, String[]> passedValues = new HashMap<>();
-		Map<String, String[]> requestParameters = request.getParameterMap();
+		requestParameters = request.getParameterMap();
 		passedValues.putAll(requestParameters);
+
+		reportRequestParameters = new HashMap<>();
+		for (Entry<String, String[]> entry : requestParameters.entrySet()) {
+			String paramName = entry.getKey();
+			String[] paramValues = entry.getValue();
+			if (StringUtils.startsWithIgnoreCase(paramName, ArtUtils.PARAM_PREFIX)) {
+				reportRequestParameters.put(paramName, paramValues);
+			}
+		}
 
 		HttpSession session = request.getSession();
 		User sessionUser = (User) session.getAttribute("sessionUser");
@@ -248,6 +287,8 @@ public class ParameterProcessor {
 
 		setIsChainedParent(reportParamsList);
 
+		result.setReportRequestParameters(reportRequestParameters);
+
 		return result;
 	}
 
@@ -313,7 +354,7 @@ public class ParameterProcessor {
 				//this is a report parameter. set it's value
 				String[] paramValues = entry.getValue();
 
-				String paramName = htmlParamName.substring(2);
+				String paramName = htmlParamName.substring(ArtUtils.PARAM_PREFIX.length());
 				logger.debug("paramName='{}'", paramName);
 
 				ReportParameter reportParam = reportParamsMap.get(paramName);
