@@ -2,6 +2,7 @@ ART 3.10
 * Provide edit report link from select parameters page
 * Allow changing job owner
 * Check upper case and lower case table names for cache resultset jobs
+* Fix for parent parameters not being considered in drilldown reports
 * Updated jclouds
 
 ART 3.9
